# asmi

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
.claude/handoffs/: 2026-02-21-060427-mlx-top-activity-log-dedup-jaccl.md  2026-02-21-070945-apple-smi-nodemap-rdma.md  2026-02-21-075344-rdma-topology-tui.md  2026-03-04-005942-asmi-topology-and-cluster-infra.md
.claude/harness/: features.json  progress.txt  references.md
.claude/skills/asmi/: SKILL.md
crates/ane-runtime/: Cargo.toml  build.rs
crates/ane-runtime/src/: ane_in_memory_model.rs  ane_in_memory_model_descriptor.rs  ane_io_surface_object.rs  ane_request.rs  client.rs  error.rs  executable.rs  io_surface.rs  lib.rs  probe.rs  request.rs  tensor_data.rs
crates/ane-runtime/src/graph/: compile.rs  descriptor.rs  mod.rs  ops.rs  tensor.rs
crates/ane-runtime/src/ops/: activation.rs  activation_mode.rs  concat.rs  constant.rs  conv.rs  deconv.rs  flatten.rs  inner_product.rs  instance_norm.rs  matmul.rs  mil.rs  mod.rs  op.rs  pad_fill_mode.rs  pad_mode.rs  padding.rs  pool_type.rs  pooling.rs  reduction.rs  reduction_mode.rs  reshape.rs  shape.rs  slice.rs  softmax.rs  transpose.rs  weights.rs
crates/ane-runtime/src/ops/elementwise/: mod.rs  op.rs  op_type.rs
crates/ane-runtime/src/ops/scalar/: mod.rs  op.rs  op_type.rs
crates/cluster-monitor/: Cargo.toml  RESEARCH.md  build.rs
crates/cluster-monitor/src/: aggregator.rs  collector.rs  config.rs  footprint.rs  health.rs  ioreport.rs  jaccl_ffi.rs  lib.rs  models.rs  monitor.rs  scanner.rs  ssh.rs  types.rs
crates/cluster-monitor/src/ane_bridge/: bridge.m  mod.rs
crates/cluster-monitor/testdata/: arp-table.txt  footprint-sample.txt  ifconfig-bridges.txt  iostat.txt  netstat-ib.txt  powermetrics-text.txt  ps-mlx.txt  rdma-status.txt  sysctl-hw.txt  system-profiler-tb.txt  tailscale-status.json  v1-models-response.json  vmstat.txt
deploy/: com.asmi.daemon.launchagent.plist  com.asmi.daemon.launchdaemon.plist  install-headless.sh
docs/: daemon-restore-findings.md
docs/plans/: 2026-02-25-remove-hardcoded-paths-enrich-models.md  2026-02-26-asmi-refactor-phase2.md  2026-02-27-fix-ram-reporting-add-memory-breakdown.md  2026-03-01-early-crash-detection.md  2026-03-01-gut-tui-simplification-cascades.md  2026-03-01-serve-share-endpoint.md  2026-03-02-ane-monitoring-and-compute.md  2026-03-08-ane-compute-integration.md  2026-04-26-jaccl-standalone-integration.md  2026-05-23-jaccl-native-transfer.md  2026-05-24-jaccl-handshake-fix.md  2026-05-24-topology-device-name-fix.md  2026-05-24-transfer-rdma-fix.md  2026-05-27-native-topology.md  2026-05-30-daemon-restore.md  2026-05-31-m3u2-mesh-bringup.md  2026-06-11-ds4-first-class-engine.md
docs/research/: ane-deep-research-summary.md
launchd/: INSTALL_NODE.md  com.r1o.asmi-helper.plist  install-node.sh
mcp-server/: engine-map.json  server.py
scripts/: tailscale-join.sh
src/: ane.rs  asmi.rs  bonjour.rs  cli.rs  daemon.rs  daemon_mgmt.rs  daemon_startup.rs  downloads.rs  helper.rs  hf.rs  launchd.rs  main.rs  mlx_distributed_config.rs  mlx_smi.rs  rdma_autosetup.rs  serve.rs  setup.rs  topology.rs  transfer.rs  watchdog.rs
tests/: ane_endpoints.rs  daemon_endpoints.rs  serve_share.rs
tests/fixtures/: launchctl_list.txt  launchctl_print_asmi.txt  launchctl_print_disabled.txt
tools/: asmi-pd-probe.c
