[workspace]
resolver = "2"
members = ["crates/cluster-monitor", "crates/ane-runtime"]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = []

[package]
name = "asmi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Apple Silicon cluster monitor — like nvidia-smi + htop for Mac"

[[bin]]
name = "asmi"
path = "src/main.rs"

[[bin]]
name = "asmi-helper"
path = "src/helper.rs"

[dependencies]
asmi-core = { path = "crates/cluster-monitor" }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.60", features = ["derive"] }
toml = "1.0.3"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
axum = "0.8"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
nix = { version = "0.29", features = ["signal", "process", "user"] }
thiserror = "2"
ane-runtime = { path = "crates/ane-runtime", optional = true }
objc2-io-surface = { version = "0.3", optional = true, features = ["IOSurfaceRef"] }
sha2 = { version = "0.10", optional = true }
libc = { version = "0.2", optional = true }

[features]
default = []
ane = ["dep:ane-runtime", "dep:objc2-io-surface"]
jaccl = ["asmi-core/jaccl", "dep:sha2", "dep:libc"]
