[package]
name = "ane-runtime"
version = "0.1.0"
edition = "2024"
license = "MIT"
build = "build.rs"

[lib]
name = "ane"
crate-type = ["lib"]

[[bin]]
name = "gpt2_forward"
path = "src/bin/gpt2_forward/main.rs"

[[bin]]
name = "qwen_forward"
path = "src/bin/qwen_forward/main.rs"

[dependencies]
thiserror = "2.0"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSObjCRuntime"] }
objc2-io-surface = { version = "0.3", features = ["IOSurfaceRef", "IOSurfaceTypes", "objc2", "objc2-foundation", "objc2-core-foundation", "libc"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hf-hub = "0.5"
safetensors = "0.7"
tokenizers = "0.22"
half = "2"
rand = "0.10"
