[package]
name = "asmi-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core library for asmi — Apple Silicon cluster metrics"

[dependencies]
tokio = { version = "1", features = ["process", "time", "sync", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
futures = "0.3"
whoami = "1"
dirs = "6"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
